Deduplicate Coop URL helpers across payment generators
Extract the "ee not et" language mapping into CoopLanguage so both
CoopPankPaymentLinkGenerator and SavingsFundRecurringPaymentLinkGenerator
share one source of truth. Route the savings module's LHV and Swedbank
URL builders through PaymentUrlEncoder and drop the duplicate private
encode() — now exactly one URL-encoding implementation. Replace the
deprecated `new Locale("et")` test setup with `Locale.of("et")`.

No behaviour change; URLs identical to the prior commit.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>